--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <div class="container">
         <h1>Virtual Memory Analyser</h1>
 
-        <!-- Control Panel -->
         <div class="controls">
             <label for="algo-select">Replacement Algorithm:</label>
             <select id="algo-select">
@@ -40,19 +39,23 @@
             <input type="checkbox" id="dark-mode-toggle" />
         </div>
 
-        <!-- Status Section -->
         <div class="status">
             <h3>Last Accessed Page: <span id="last-page">-</span></h3>
         </div>
 
-        <!-- Statistics Panel -->
         <div class="stats">
             <p>Total Accesses: <span id="total-accesses">0</span></p>
             <p>Page Faults: <span id="page-faults">0</span></p>
             <p>Fault Rate: <span id="fault-rate">0%</span></p>
         </div>
 
-        <!-- Visual Display -->
+        <div class="visual">
+            <h3>Performance Metrics</h3>
+            <div class="chart-container" style="max-height: 300px;">
+                <canvas id="performanceChart"></canvas>
+            </div>
+        </div>
+
         <div class="visual">
             <h3>Page Table</h3>
             <div id="page-table" class="grid"></div>
@@ -61,60 +64,13 @@
             <div id="frames" class="grid"></div>
         </div>
 
-        <!-- Access History -->
         <div id="history-log">
             <h3>Access History</h3>
             <ul id="log-entries"></ul>
         </div>
-
-        <!-- Performance Metrics (Moved after Access History) -->
-        <div class="performance-metrics">
-            <h3>Performance Metrics</h3>
-
-            <!-- Page Fault Chart -->
-            <div id="chart-container" style="width:100%; height:250px;">
-                <canvas id="pageFaultChart"></canvas>
-            </div>
-
-            <!-- Hit Rate Progress Bar -->
-            <div class="hit-rate-container">
-                <p>Hit Rate:</p>
-                <div id="hit-rate-bar">
-                    <div id="hit-rate-fill"></div>
-                </div>
-            </div>
-        </div>
-
-        <!-- New Charts Section -->
-
-        <!-- Memory Usage Bar Chart -->
-        <div class="memory-usage">
-            <h3>Memory Usage</h3>
-            <div id="memory-usage-chart-container" style="width:100%; height:250px;">
-                <canvas id="memoryUsageChart"></canvas>
-            </div>
-        </div>
-
-        <!-- Page Table Status Bar Chart -->
-        <div class="page-table-status">
-            <h3>Page Table Status</h3>
-            <div id="page-table-status-chart-container" style="width:100%; height:250px;">
-                <canvas id="pageTableStatusChart"></canvas>
-            </div>
-        </div>
     </div>
 
-    <!-- Chart.js Library -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <!-- Main Script -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-
-    <!-- Dark Mode Toggle Script -->
-    <script>
-        document.getElementById('dark-mode-toggle').addEventListener('change', function() {
-            document.body.classList.toggle('dark-mode', this.checked);
-        });
-    </script>
 </body>
 </html>
