--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
                 <canvas id="performanceChart"></canvas>
             </div>
         </div>
+        
+        <div class="visual">
+            <h3>Memory Usage Status</h3>
+            <div class="chart-container" style="max-height: 250px;">
+                <canvas id="memoryUsageChart"></canvas>
+            </div>
+        </div>
 
+        <div class="visual">
+            <h3>Page Table Valid/Invalid Entries</h3>
+            <div class="chart-container" style="max-height: 250px;">
+                <canvas id="pageTableChart"></canvas>
+            </div>
+        </div>
+        
         <div class="visual">
             <h3>Page Table</h3>
             <div id="page-table" class="grid"></div>
